cargo-features = ["profile-overrides"]

[package]
name = "rbf-utils"
version = "0.1.0"
authors = ["Hal Gentz <zegentzy@protonmail.com>"]
edition = "2018"

[dependencies]
crc16 = "0.4"
rayon = "1.1"
itertools = "0.8"
prettytable-rs = "0.8"

[[bin]]
name = "chunker"
path = "src/chunker.rs"

[[bin]]
name = "diffmay"
path = "src/diffmay.rs"

[profile.release]
lto = true
codegen-units = 1

[profile.release.overrides."*"]
codegen-units = 1
opt-level = 3
